--- a/package.json
+++ b/package.json
@@ -37,15 +37,20 @@
 		"url": "https://github.com/adelphes/google-search-ext.git"
 	},
 	"engines": {
-		"vscode": "^0.11.0"
+		"vscode": "^1.5.0"
 	},
 	"main": "./out/extension",
 	"scripts": {
-		"vscode:prepublish": "node ./node_modules/vscode/bin/compile",
-		"compile": "node ./node_modules/vscode/bin/compile -watch -p ./"
+ 		"vscode:prepublish": "tsc -p ./",
+        "compile": "tsc -watch -p ./",
+        "postinstall": "node ./node_modules/vscode/bin/install",
+        "test": "node ./node_modules/vscode/bin/test"
 	},
 	"devDependencies": {
-		"vscode": "^0.11.0",
-		"typescript": "^2.0.0"
+        "typescript": "^2.0.3",
+        "vscode": "^1.0.0",
+        "mocha": "^2.3.3",
+        "@types/node": "^6.0.40",
+        "@types/mocha": "^2.2.32"
 	}
 }
