--- a/package.json
+++ b/package.json
@@ -1,77 +1,83 @@
 {
-	"name": "google-search-ext",
-	"displayName": "Google Search",
-	"version": "0.1.2",
-	"publisher": "adelphes",
-	"description": "Enables Google Search from the VS Code editor.",
-	"author": {
-		"name": "adelphes"
-	},
-	"categories": [
-		"Other"
-	],
-	"license": "SEE LICENSE IN LICENSE.txt",
-	"icon": "images/g.png",
-	"galleryBanner": {
-		"color": "#C80000",
-		"theme": "dark"
-	},
-	"activationEvents": [
-		"onCommand:google-search-ext.searchGoogle"
-	],
-	"contributes": {
-        "commands": [{
-            "command": "google-search-ext.searchGoogle",
-            "title": "Search Google"
-        }],
- 		"menus": {
-			"editor/title": [{
-				"when": "editorHasSelection",
-				"command": "google-search-ext.searchGoogle",
-				"group": "navigation"
-			}]
-		},
-		"configuration": [{
-			"title": "Google Search",
-			"properties": {
-				"google-search-ext.interface-language": {
-					"type": "string",
-					"description": "Sets the interface language parameter ('hl') of the Google query. Commonly a two letter code. Values list: https://developers.google.com/custom-search/docs/xml_results_appendices#interfaceLanguages"
-				},
-				"google-search-ext.language": {
-					"type": "string",
-					"description": "Sets the parameter limiting results by language ('lr') of the Google query. Should be a value of the format 'lang_<2-letter-lowercase-code>', e.g. lang_de for German. Values list: https://developers.google.com/custom-search/docs/xml_results_appendices#languageCollections"
-				},
-				"google-search-ext.country": {
-					"type": "string",
-					"description": "Sets the parameter limiting results by country ('cr') of the Google query. Should be a value of the format 'country<2-letter-uppercase-code>', e.g. countryFR for France. Values list: https://developers.google.com/custom-search/docs/xml_results_appendices#countryCollections"
-				},
-				"google-search-ext.custom-query": {
-					"type": "string",
-					"description": "Anything that should be added to the query string of the URL. E.g. 'num=10&as_qdr=3d', which limits the number of results to 10 and sets the date range to the last three days. Documentation on available parameters: https://developers.google.com/custom-search/docs/xml_results#wsQueryTerms"
-				}
-			}
-		}]
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/adelphes/google-search-ext.git"
-	},
-	"engines": {
-		"vscode": "^1.5.0"
-	},
-	"main": "./out/extension",
-	"scripts": {
- 		"vscode:prepublish": "tsc -p ./",
+    "name": "google-search-ext",
+    "displayName": "Google Search",
+    "version": "0.2.1",
+    "publisher": "adelphes",
+    "description": "Enables Google Search from the VS Code editor.",
+    "author": {
+        "name": "adelphes"
+    },
+    "categories": [
+        "Other"
+    ],
+    "license": "SEE LICENSE IN LICENSE.txt",
+    "icon": "images/g.png",
+    "galleryBanner": {
+        "color": "#C80000",
+        "theme": "dark"
+    },
+    "activationEvents": [
+        "onCommand:google-search-ext.searchGoogle"
+    ],
+    "contributes": {
+        "commands": [
+            {
+                "command": "google-search-ext.searchGoogle",
+                "title": "Search Google"
+            }
+        ],
+        "menus": {
+            "editor/title": [
+                {
+                    "when": "editorHasSelection",
+                    "command": "google-search-ext.searchGoogle",
+                    "group": "navigation"
+                }
+            ]
+        },
+        "configuration": [
+            {
+                "title": "Google Search",
+                "properties": {
+                    "google-search-ext.interface-language": {
+                        "type": "string",
+                        "description": "Sets the interface language parameter ('hl') of the Google query. Commonly a two letter code. Values list: https://developers.google.com/custom-search/docs/xml_results_appendices#interfaceLanguages"
+                    },
+                    "google-search-ext.language": {
+                        "type": "string",
+                        "description": "Sets the parameter limiting results by language ('lr') of the Google query. Should be a value of the format 'lang_<2-letter-lowercase-code>', e.g. lang_de for German. Values list: https://developers.google.com/custom-search/docs/xml_results_appendices#languageCollections"
+                    },
+                    "google-search-ext.country": {
+                        "type": "string",
+                        "description": "Sets the parameter limiting results by country ('cr') of the Google query. Should be a value of the format 'country<2-letter-uppercase-code>', e.g. countryFR for France. Values list: https://developers.google.com/custom-search/docs/xml_results_appendices#countryCollections"
+                    },
+                    "google-search-ext.custom-query": {
+                        "type": "string",
+                        "description": "Anything that should be added to the query string of the URL. E.g. 'num=10&as_qdr=3d', which limits the number of results to 10 and sets the date range to the last three days. Documentation on available parameters: https://developers.google.com/custom-search/docs/xml_results#wsQueryTerms"
+                    }
+                }
+            }
+        ]
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/adelphes/google-search-ext.git"
+    },
+    "engines": {
+        "vscode": "^1.5.0"
+    },
+    "main": "./out/extension",
+    "scripts": {
+        "vscode:prepublish": "tsc -p ./",
         "compile": "tsc -watch -p ./",
         "postinstall": "node ./node_modules/vscode/bin/install",
         "test": "node ./node_modules/vscode/bin/test"
-	},
-	"devDependencies": {
+    },
+    "devDependencies": {
         "typescript": "^2.0.3",
         "vscode": "^1.0.0",
         "mocha": "^2.3.3",
         "@types/node": "^6.0.40",
         "@types/mocha": "^2.2.32"
-	}
+    }
 }
