Adds search prompt if there is no selection. New config option to set selection mode.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,11 @@
 			"type": "extensionHost",
 			"request": "launch",
 			"runtimeExecutable": "${execPath}",
-			"args": ["--extensionDevelopmentPath=${workspaceFolder}", "--extensionTestsPath=${workspaceFolder}/out/test" ],
+			"args": [
+				"--disable-extensions", // Prevent interference from other extensions
+				"--extensionDevelopmentPath=${workspaceFolder}",
+				"--extensionTestsPath=${workspaceFolder}/out/test"
+			],
 			"stopOnEntry": false,
 			"sourceMaps": true,
 			"outFiles": ["${workspaceFolder}/out"],
